<resources>
    <string name="app_name">US</string>
    <string name="welcome_message">Welcome Back</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="login">Login</string>
    <string name="empty_login_fields">Sorry! Please Enter data</string>
    <string name="empty_username">Username is empty</string>
    <string name="empty_password">Empty Password</string>
    <string name="username_not_vaild">Username Is not Vaild</string>
    <string name="password_not_vaild">Password is not vaild</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="ok">You are logging</string>
    <string name="attempt_msg">You has blocked from logging 5 minuts</string>
    <string name="user_logging">You are logging</string>
    <string name="user">Email or Phone</string>
    <string name="name">Full Name</string>
    <string name="have_email">Do you have an email ? Login</string>
</resources>
